--- a/home.css
+++ b/home.css
@@ -42,14 +42,15 @@
 
 html, body {
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
     border: 0;
     padding: 0;
-    
+    background-color: #ebebeb;
+    overflow-y: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling for mobile */
+    scrollbar-width: none; /* For Firefox */
 }
 
 /* header */
@@ -64,7 +65,8 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(208, 208, 208);
+    box-shadow: 0px 0px 5px 0px #000000a2;
+    z-index: 200;
 }
 
 .left_icon {
@@ -93,9 +95,13 @@ html, body {
     border-radius: 50px;
 }
 
-.search_icon {
+.search_btn {
 
+    display: flex;
+    align-items: center;
+    background: none;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .material-symbols-rounded {
@@ -126,7 +132,7 @@ html, body {
 
 .notif_icon:hover {
 
-    background: linear-gradient(90deg, #598BF1 0%, rgba(148, 134, 241, 0.8) 100%);
+    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
     color: #fff;
     border: #fff;
 }
@@ -144,30 +150,32 @@ html, body {
 .profile {
 
     border-radius: 50%;
-    box-shadow:  5px 5px 10px #a8a8a8,
-             -5px -5px 10px #ffffff;
+    box-shadow:  5px 5px 10px #a8a8a8;
 }
 
 /* main */
 
 .main {
 
-    position: relative;
-    top: 5%;
-    width: 100%;
-    height: 90%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* menu */
 
 .menu {
 
+    position: fixed;
+    top: 10%;
+    left: 0;
     justify-content: flex-start;
     /* align-items: center; */
     display: flex;
     flex-direction: column;
     width: 25%;
+    z-index: 100;
 }
 
 .menu_profile {
@@ -205,12 +213,12 @@ html, body {
 .icon_wrapper:hover {
 
     border-radius: 50px;
-    background-color: #598cf125;
+    background: linear-gradient(90deg, #598cf16f 0%, rgba(148, 134, 241, 0.803) 100%);
 }
 
 .icons {
 
-    fill: #7c7c7c;
+    fill: #626262;
 }
 
 .icons:hover {
@@ -227,26 +235,211 @@ html, body {
 
 .post_feed {
 
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     width: 50%;
-    background-color: aqua;
+    height: max-content;
 }
+
+.post_story {
+
+    width: 90%;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    overflow-x: auto;  /*Enable horizontal scrolling */
+    white-space: nowrap; /* Prevent wrapping of children */
+
+    /* Hide scrollbar for WebKit browsers (Chrome, Safari) */
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling for mobile */
+    scrollbar-width: none; /* For Firefox */
+}
+
+/* Show scrollbar when hovering over the .post_story */
+.post_story:hover {
+    overflow-x: auto; /* Show scrollbar on hover */
+    scrollbar-width: auto; /* For Firefox, show scrollbar */
+}
+
+/* Hide scrollbar for WebKit browsers (Chrome, Safari) */
+.post_story::-webkit-scrollbar {
+    display: none; /* Initially hide scrollbar */
+}
+
+/* Show scrollbar on hover for WebKit (Chrome, Safari) */
+.post_story:hover::-webkit-scrollbar {
+    display: block;
+    height: 8px; /* Adjust the scrollbar height */
+}
+
+/* Style the WebKit scrollbar */
+.post_story::-webkit-scrollbar-thumb {
+    background-color: #9f1bf7; /* Scrollbar thumb (handle) color */
+    border-radius: 4px;
+}
+
+.post_story_user {
+
+    min-width: 80px; /* Set minimum width to make sure each item has a consistent width */
+    display: inline-flex; /* Use inline-flex to respect white-space: nowrap */
+    flex-direction: column;
+    align-items: center;
+    margin-right: 58px;
+    margin-bottom: 10px;
+}
+
+.post_story_user_img {
+
+    border-radius: 50px;
+    border: 3px solid #a01bf7;
+    margin-bottom: 10px;
+}
+
+.post_story_user_text {
+
+    font-size: 0.8rem;
+}
+
+/* main post */
+
+.post {
+
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    background: #FFF;
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+}
+
+.upper_post_tag {
+
+    display: flex;
+    width: 100%;
+}
+
+.user_profile {
+
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.post_text {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.post_time {
+
+    font-size: 0.8rem;
+}
+
+.post_description {
+
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    margin-top: 15px;
+}
+
+.text_description {
+
+    font-size: 1rem;
+}
+
+.text_hashtag {
+
+    font-size: 1rem;
+    color: #2200ff;
+}
+
+.post_img_wrapper {
+
+    margin-top: 5px;
+    width: 100%;
+}
+
+.post_img {
+  
+    width: 100%;
+    height: auto;
+}
+
+.post_icons {
+
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.post_icon_wrapper {
+
+    width: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.post_icon_text {
+
+    font-size: 0.9rem;
+    margin-left: 5px;
+}
+
+.post_icon_btn {
+
+    background: none;
+    outline: none;
+    width: 32px;
+    height: 32px;
+}
+
+.toggle_btn {
+
+    margin-left: 65%;
+}
+
+ion-icon {
+
+    font-size: 32px;
+    cursor: pointer;
+}
+
+/* post icon button on-click */
+
+.post_icon_btn.clicked {
+    color: #ff0000; /* This will change the icon to red */
+}
+
 
 /* follow */
 
 .follow {
 
+    position: fixed;
+    right: 0;
+    top: 10%;
     display: flex;
     flex-direction: column;
     width: 25%;
+    z-index: 100;
 }
 
 .suggest {
 
     font-size: 1.2rem;
     margin-top: 30px;
-    margin-left: 40px;
+    margin-left: 50px;
 }
 
 .follow_wrapper {
@@ -288,3 +481,9 @@ html, body {
     margin-left: 40px;
     margin-right: 20px;
 }
+
+.btn_follow {
+
+    background: none;
+}
+
