--- a/home.css
+++ b/home.css
@@ -308,6 +308,7 @@ html, body {
 
 .post {
 
+    position: relative;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -328,6 +329,7 @@ html, body {
 .user_profile {
 
     border-radius: 50%;
+    box-shadow:  0px 1px 4px 1px #a8a8a8;
     margin-right: 10px;
 }
 
@@ -406,7 +408,8 @@ html, body {
 
 .toggle_btn {
 
-    margin-left: 65%;
+    position: absolute;
+    right: 5%;
 }
 
 ion-icon {
