--- a/style.css
+++ b/style.css
@@ -232,3 +232,66 @@ main {
     margin: 20px;
     color: #25B86A;
 }
+
+.or {
+
+    margin-top: 2%;
+    font-size: 0.8rem;
+}
+
+/* google btn */
+
+.google_btn {
+    margin-top: 5%;
+    max-width: 320px;
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    padding: 0.875rem 72px 0.875rem 1.75rem;
+    background-color: #4285f4;
+    color: #ffffff;
+    font-size: 0.9rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    gap: 0.75rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: none;
+    transition: all 0.6s ease;
+    filter: brightness(1.2);
+    font-family: sans-serif;
+  }
+  
+  .google_btn .google-icon {
+    background-color: #fff;
+    display: grid;
+    position: absolute;
+    right: 0;
+    place-items: center;
+    width: 3rem;
+    height: 100%;
+    border-radius: 0.5rem 0 0 0.5rem;
+    filter: brightness(1.2);
+  }
+  
+  .google_btn span svg {
+    width: 1.5rem;
+    height: 1.5rem;
+    filter: drop-shadow(0 0 5px rgba(66, 133, 244, 0.8));
+  }
+  
+  .google_btn:hover {
+    box-shadow: 0 4px 30px rgba(66, 133, 244, 0.1),
+      0 2px 30px rgba(52, 168, 83, 0.06);
+    filter: brightness(1);
+  }
+  
+  .google_btn:hover .google-icon {
+    filter: brightness(1);
+  }
+  
