--- a/home.css
+++ b/home.css
@@ -9,6 +9,11 @@
 }
 
 @font-face {
+    font-family: 'poppins_light';
+    src: url('Poppins-Light.ttf');
+}
+
+@font-face {
     font-family: 'sf_regular';
     src: url('SFPRODISPLAYREGULAR.OTF');
 }
@@ -151,12 +156,179 @@ html, body {
 .profile {
 
     border-radius: 50%;
-    box-shadow:  5px 5px 10px #a8a8a8;
+    box-shadow:  0px 3px 10px 2px #a8a8a8;
+}
+
+.profile:hover {
+
+    box-shadow:  0px 0px 1px 2px #9f1bf7;
+}
+
+.profile_btn {
+
+    background: none;
+}
+
+/* profile dropdown */
+.profile_dropdown {
+
+    display: none; /* Initially hidden */
+    position: absolute;
+    top: 12%; /* Adjust this based on your button size */
+    right: 2%;
+    background: #ffffff;
+    width: 300px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 300;
+    overflow: hidden;
+    padding: 1.3%;
+}
+
+/* Show dropdown when button is clicked */
+.profile_dropdown.show {
+    display: block;
+}
+
+.profile_dropdown.show_profile {
+
+    display: block;
+}
+
+.profile_title {
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 30px;
+    
+}
+
+.profile_text {
+
+    font-size: 1.2rem;
+    font-weight: bold;
+    font-family: 'poppins';
+}
+
+.user_profile_wrapper {
+
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 2%;
+}
+
+.user_profile_wrapper:hover {
+
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.user_profile_img {
+
+    border-radius: 50px;
+}
+
+.profile_menu {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 120px;
+    width: 100%;
+}
+
+.user_text_name {
+
+    font-size: 1rem;
+    margin-left: 5%;
+}
+
+.profile_menu_btn {
+
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 2%;
+}
+
+.profile_menu_btn:hover {
+
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.profile_menu_text {
+
+    font-size: 1rem;
+    margin-left: 5%;
+}
+
+.profile_settings {
+
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile_logout {
+
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* about us & terms of use */
+
+.terms_wrap {
+
+    font-size: 0.8rem;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.terms_link {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2%;
+}
+
+.terms_bold {
+
+    font-weight: bold;
+    font-family: 'sf_bold';
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.link:hover {
+
+    border-bottom: 1px solid #000;
+    color: #000;
+}
+
+.terms_text {
+
+    font-size: 0.7rem;
+    font-family: 'poppins_light';
 }
 
 /* notification dropdown */
-
 .notif_dropdown {
+
     display: none; /* Initially hidden */
     position: absolute;
     top: 12%; /* Adjust this based on your button size */
@@ -264,7 +436,7 @@ html, body {
 .notif_line {
 
     border: none;
-    border-top: 1px solid #000;
+    border-top: 1px solid #d3d3d3;  
 }
 
 .notif_user_img {
@@ -550,6 +722,14 @@ html, body {
     height: 32px;
 }
 
+.post_icon_btn_heart {
+
+    background: none;
+    outline: none;
+    width: 32px;
+    height: 32px;
+}
+
 .toggle_btn {
 
     position: absolute;
@@ -564,7 +744,7 @@ ion-icon {
 
 /* post icon button on-click */
 
-.post_icon_btn.clicked {
+.post_icon_btn_heart.clicked {
     color: #ff0000; /* This will change the icon to red */
 }
 
