--- a/home.css
+++ b/home.css
@@ -55,7 +55,6 @@ html, body {
     overflow-y: auto;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch; /* Enable smooth scrolling for mobile */
-    scrollbar-width: none; /* For Firefox */
 }
 
 /* header */
@@ -289,7 +288,7 @@ html, body {
 
 .terms_wrap {
 
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     flex-direction: column;
     display: flex;
     justify-content: center;
@@ -322,7 +321,7 @@ html, body {
 
 .terms_text {
 
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     font-family: 'poppins_light';
 }
 
@@ -436,6 +435,7 @@ html, body {
 .notif_line {
 
     border: none;
+    width: 100%;
     border-top: 1px solid #d3d3d3;  
 }
 
@@ -487,11 +487,17 @@ html, body {
     top: 10%;
     left: 0;
     justify-content: flex-start;
-    /* align-items: center; */
     display: flex;
     flex-direction: column;
     width: 25%;
+    height: 90%;
     z-index: 100;
+}
+
+.menu_terms {
+
+    position: absolute;
+    bottom: 1%;
 }
 
 .menu_profile {
@@ -701,6 +707,16 @@ html, body {
     align-items: center;
 }
 
+.post_hover {
+
+    color: #00000096;
+}
+
+.post_hover:hover {
+
+    color: #000;
+}
+
 .post_icon_wrapper {
 
     width: 80px;
@@ -734,6 +750,19 @@ html, body {
 
     position: absolute;
     right: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#toggle_option {
+
+    color: #00000096;
+}
+
+#toggle_option:hover {
+
+    color: #000;
 }
 
 ion-icon {
@@ -748,13 +777,67 @@ ion-icon {
     color: #ff0000; /* This will change the icon to red */
 }
 
+/* post option box */
+
+.option_box {
+
+    position: absolute;
+    right: 5%;
+    top: 15%;
+    width: 25%;
+    display: none;
+    background: #ffffff;
+    z-index: 10;
+    border-radius: 5px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.3);
+    padding: 1.5%;
+}
+
+/* Show box when button is clicked */
+.option_box.show {
+    display: block;
+}
+
+.option_box_wrapper {
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.option_box_btn {
+
+    width: 100%;
+    font-size: 1rem;
+    background: none;
+    padding: 5%;
+    margin-bottom: 3%;
+    margin-top: 3%;
+}
+
+.option_box_btn:hover {
+
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+#unfollow {
+
+    color: #e30000;
+}
+
+#block {
+
+    color: #e30000;
+}
 
 /* follow */
 
 .follow {
 
     position: fixed;
-    right: 0;
+    right: 0.5%;
     top: 10%;
     display: flex;
     flex-direction: column;
