added create post ui

--- a/home.css
+++ b/home.css
@@ -33,6 +33,21 @@
     src: url('SFPRODISPLAYTHINITALIC.OTF');
 }
 
+@font-face {
+    font-family: 'yantra';
+    src: url('Yantramanav-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'yantra_bold';
+    src: url('Yantramanav-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'yantra_light';
+    src: url('Yantramanav-Light.ttf');
+}
+
 *{
 
     font-family: 'sf_regular', sans-serif;
@@ -62,7 +77,7 @@ html, body {
 .navbar {
 
     background-color: #fff;
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     height: 10%;
@@ -557,7 +572,6 @@ html, body {
 
 .post_feed {
 
-    margin-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -726,8 +740,10 @@ html, body {
 
 .post_icon_text {
 
+    background: none;
     font-size: 0.9rem;
     margin-left: 5px;
+    cursor: pointer;
 }
 
 .post_icon_btn {
@@ -831,6 +847,898 @@ ion-icon {
 
     color: #e30000;
 }
+
+/* comment box */
+.comment_box {
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* comment overlay */
+.comment_overlay {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 400;
+    width: 100%;
+    height: 100%;
+    background-color: #00000058;
+}
+
+/* show comment when onclick */
+.comment_overlay.show_comment {
+
+    display: block;
+}
+
+.comment_box_wrap {
+    
+    background: none;
+    width: 40%;
+    height: 70%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.comment_post_title {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+}
+
+.main_comments {
+
+    position: relative;
+    width: 100%;
+    height: 85%;
+    background-color: #fff;
+}
+
+.comment_text {
+
+    font-family: 'sf_bold';
+    font-size: 1.5rem;
+}
+
+.comment_close {
+
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    right: 3%;
+    top: 30%;
+    border-radius: 50px;
+}
+
+.comment_close:hover {
+
+    background-color: #ffffff57;
+}
+
+#close_icon {
+
+    font-size: 32px;
+}
+
+.users_comments {
+
+    height: 80%;
+    width: 100%;
+    padding: 2%;
+    overflow-y: auto; /* Enables vertical scrolling when content overflows */
+}
+
+/* comment containner */
+
+.comment_containner {
+
+    width: 100%;
+}
+
+.upper_comment {
+
+    width: 100%;
+    display: flex;
+}
+
+#comment_heart_btn {
+
+    margin-left: 73%;
+}
+
+#user_comment_profile {
+
+    border-radius: 50px;
+}
+
+#user_comment_name {
+
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: 5%;
+}
+
+#user_comment_text {
+
+    font-size: 0.8rem;
+}
+
+.comment_info {
+
+    margin-left: 3%;
+    display: flex;
+    flex-direction: column;
+}
+
+.comment_small_icons {
+
+    display: flex;
+    width: max-content;
+    font-size: 0.8rem;
+    margin-left: 10%;
+    margin-top: 1%;
+}
+
+#comment_timestamp {
+
+    color: #00000077;
+    margin-right: 30%;
+}
+
+#comment_number_of_likes {
+
+    color: #00000077;
+}
+
+.comment_like_btn {
+
+    background: none;
+    color: #00000077;
+    font-size: 0.8rem;
+}
+
+.comment_like_btn.liked {
+
+    color: #2200ff;
+}
+
+#comment_like_button:hover {
+
+    border-bottom: 1px solid #00000077;
+}
+
+/* comment input box */
+.comment_input  {
+
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+}
+
+.comment_input_wrap {
+
+    width: 60%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #0000001d;
+}
+
+#enter_comment {
+
+    width: 80%;
+    background: none;
+    margin-right: 5%;
+}
+
+#send_comment_btn {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    cursor: not-allowed;
+}
+
+#send_comment_btn.send_enabled {
+
+    cursor: pointer;
+}
+
+#sendIcon.color {
+
+    color: #9f1bf7;
+}
+
+#send_comment_btn:hover {
+
+    background: #b5b5b593;
+}
+
+.send_icon {
+
+    font-size: 20px;
+}
+
+/* like box */
+
+.like_box {
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* like overlay */
+
+.like_overlay {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 400;
+    width: 100%;
+    height: 100%;
+    background-color: #00000058;
+}
+
+/* show like when onclick */
+.like_overlay.show_like {
+
+    display: block;
+}
+
+.like_box_wrap {
+
+    background: none;
+    width: 30%;
+    height: 70%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.like_post_title {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+}
+
+.like_text {
+
+    font-family: 'sf_bold';
+    font-size: 1.5rem;
+}
+
+.like_close {
+
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    right: 3%;
+    top: 30%;
+    border-radius: 50px;
+}
+
+.like_close:hover {
+
+    background-color: #ffffff57;
+}
+
+.main_like {
+
+    position: relative;
+    width: 100%;
+    height: 85%;
+    padding: 3%;
+    padding-right: 5%;
+    background-color: #fff;
+}
+
+.users_like {
+
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.user_like_img {
+
+    border-radius: 50px;
+}
+
+.user_like_name {
+
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-left: 3%;
+}
+
+.like_follow_btn {
+
+    position: absolute;
+    right: 0%;
+    top: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    height: 50%;
+    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
+    border-radius: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+}
+
+.like_follow_btn:hover {
+
+    box-shadow: 0px 0px 5px 1px #bebebe;
+}
+
+/* create overlay */
+
+.create_overlay {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 400;
+    width: 100%;
+    height: 100%;
+    background-color: #00000058;
+}
+
+.create_overlay.show_create {
+
+    display: block;
+}
+
+.create_box {
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create_box_wrap {
+
+    display: none;
+    background: none;
+    width: 30%;
+    height: 70%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.create_box_wrap.show_create_box {
+
+    display: block;
+}
+
+.create_title {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+}
+
+.create_text {
+
+    font-family: 'sf_bold';
+    font-size: 1.5rem;
+}
+
+.create_close {
+
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    right: 3%;
+    top: 30%;
+    border-radius: 50px;
+}
+
+.create_close:hover {
+
+    background-color: #ffffff57;
+}
+
+.main_create {
+
+    position: relative;
+    width: 100%;
+    height: 85%;
+    padding: 3%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+}
+
+.main_create_btn {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 10%;
+    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+#create_option {
+
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+/* create post */
+
+.create_post_box {
+
+    display: none;
+    background: none;
+    width: 40%;
+    height: fit-content;
+    max-height: 85%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.create_post_box.show {
+
+    display: block;
+}
+
+.main_create_post {
+
+    position: relative;
+    width: 100%;
+    height: 85%;
+    padding: 3%;
+    background-color: #dddddd;
+}
+
+.create_title_post {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+}
+
+.upper_create_post {
+
+    width: 100%;
+    height: max-content;
+    display: flex;
+}
+
+#create_post_user_img {
+
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.create_post_info {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 3%;
+}
+
+#create_post_user {
+
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.create_post_contents {
+
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 2%;
+    background: #fff;
+    width: 100%;
+    height: 400px;
+    max-height: fit-content;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+#create_post_input_text {
+
+    font-size: 1rem;
+}
+
+#post_preview_img_wrap {
+
+    width: 100%;
+    height: 70%;
+    background: none;
+    overflow: hidden;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+#previewImg {
+
+    width: 100%;
+    height: 100%;
+    display: none;
+    object-fit: contain; /* Scales down the image to fit within bounds without stretching */
+}
+
+.create_post_option_btn {
+
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 100%;
+}
+
+#uploadImage {
+
+    display: none;
+}
+
+#create_post_upload_img {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 32px;
+    height: 48px;
+    background: none;
+    font-size: 0.8rem;
+    margin-right: 2%;
+}
+
+.create_post_img_icon {
+
+    font-size: 28px;
+}
+
+#create_post_tag_btn {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 32px;
+    height: 48px;
+    background: none;
+    font-size: 0.8rem;
+}
+
+.create_post_tag_icon {
+
+    font-size: 28px;
+}
+
+#post_button {
+
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+#post_button:hover {
+
+    color: #fff;
+    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
+}
+
+/* tag selection */
+.create_post_tag {
+
+    display: none;
+    background: none;
+    width: 30%;
+    height: 70%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.create_post_tag.show {
+
+    display: block;
+}
+
+.create_post_tag_title {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+#tag_back_btn {
+
+    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    height: fit-content;
+}
+
+#tag_back_btn:hover {
+
+    background-color: #ffffff57;
+}
+
+#tag_back_icon {
+
+    font-size: 32px;
+}
+
+.main_create_post_tag {
+
+    width: 100%;
+    height: 85%;
+    padding: 3%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+}
+
+.tag_upper_icons {
+
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #c7c7c7;
+    padding-bottom: 3%;
+    margin-bottom: 5%;
+}
+
+.tag_search_users {
+
+    display: flex;
+    align-items: center;
+    width: 80%;
+    padding: 2%;
+    border-radius: 20px;
+    border: 1px solid #000;
+    margin-right: 6%;
+}
+
+#tag_search_btn {
+
+    font-size: 24px;
+    margin-right: 3%;
+}
+
+#tag_done_btn {
+
+    background: none;
+    font-size: 1.1rem;
+}
+
+#tag_done_btn:hover {
+
+    color: #9f1bf7;
+}
+
+#tag_search_input {
+
+    width: 80%;
+}
+
+.tag_a_user_wrap {
+
+    position: relative;
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 2%;
+    border-radius: 10px;
+}
+
+.tag_a_user_wrap:hover {
+
+    background: linear-gradient(90deg, #595bf16a 0%, rgba(148, 134, 241, 0.353) 100%);
+}
+
+#tag_a_user_img {
+
+    border-radius: 50px;
+    margin-right: 3%;
+}
+
+.tag_checkbox {
+
+    position: absolute;
+    right: 5%;
+}
+
+
+/* create story box */
+.create_story_box {
+
+    display: none;
+    background: none;
+    width: 30%;
+    height: 70%;
+    z-index: 500;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.create_story_box.show {
+
+    display: block;
+}
+
+.create_story_title {
+
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff4f;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur( 10px );
+
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.main_create_story {
+
+    width: 100%;
+    height: 85%;
+    padding: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+}
+
+.main_story_text_or {
+
+    margin: 3%;
+    font-size: 1rem;
+}
+
+.create_story_post_text {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    height: 50%;
+    border-radius: 10px;
+    background-image: url('story_text_bg.jpg');
+    background-size: cover; /* Makes the image cover the entire div */
+    background-position: center; /* Centers the image in the div */
+    background-repeat: no-repeat; /* Prevents the image from tiling */
+}
+
+.create_story_post_photo {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    height: 50%;
+    border-radius: 10px;
+    background-image: url('story_photo_bg.jpg');
+    background-size: cover; /* Makes the image cover the entire div */
+    background-position: center; /* Centers the image in the div */
+    background-repeat: no-repeat; /* Prevents the image from tiling */
+}
+
+.main_create_story_btns {
+
+    width: 60%;
+    height: 20%;
+    color: #ffffff;
+    font-size: 1.3rem;
+    font-weight: bold;
+    font-family: 'yantra';
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
 
 /* follow */
 
