--- a/home.css
+++ b/home.css
@@ -57,7 +57,7 @@
     outline: none;
     border: none;
     text-decoration: none;
-    transition: all .2s linear;
+    transition: all 0.3s linear;  /* Smooth transition for all properties */
 }
 
 html, body {
