--- a/message.css
+++ b/message.css
@@ -62,6 +62,7 @@
 
 html, body {
 
+    position: relative;
     width: 100%;
     height: 100%;
     border: 0;
@@ -499,17 +500,18 @@ ion-icon {
     display: flex;
 }
 
-/* message_opton_dropdown */
-.message_opton_dropdown {
+/* message_option_dropdown */
+.message_option_dropdown {
 
     display: none;
     flex-direction: column;
-    width: 20%;
+    width: 25%;
     height: 100%;
     border-left: 1px solid rgba(0, 0, 0, 0.4);
+    overflow: hidden; /* Prevent overflow from inner elements */
 }
 
-.message_opton_dropdown.show {
+.message_option_dropdown.show {
 
     display: flex;
 }
@@ -521,8 +523,8 @@ ion-icon {
     display: flex;
     align-items: center;
     justify-content: start;
-    box-shadow: 0px 0px 5px 0px #0000006b;
     background: #fff;
+    box-sizing: border-box;
 }
 
 #option_close_button {
@@ -541,22 +543,23 @@ ion-icon {
 /* main_option_content */
 .main_option_content {
 
-    height: 90%;
+    flex-grow: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
     background: #fff;
     padding: 5%;
+    overflow-y: auto; /* Add scroll if necessary */
 }
 
 .option_user_group {
 
     width: 100%;
-    height: 20%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10%;
+    margin-bottom: 10px;
 }
 
 .option_user_img {
@@ -573,16 +576,15 @@ ion-icon {
 
 .option_files {
 
-    height: 70%;
+    flex-grow: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
 }
 
 .files_title_group {
 
-    padding: 20px;
+    padding: 10px;
     display: flex;
     align-items: center;
 }
@@ -600,12 +602,19 @@ ion-icon {
 
 .files_content_group {
 
-    margin-top: 30px;
     width: 100%;
-    height: 50%;
+    height: 200px; /* Prevent overflow */
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+    gap: 0.5em;
+    overflow-y: auto; /* Allow scrolling */
+}
+
+/* Hide scrollbar for WebKit browsers */
+.files_content_group::-webkit-scrollbar {
+    display: none;
 }
 
 .lower_option_group {
@@ -614,12 +623,19 @@ ion-icon {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    border-top: 1px solid #000;
 }
 
 .red_option_btn {
 
+    width: max-content;
     color: #ec0000;
+}
+
+.red_option_btn:hover {
+
+    border-bottom: 1px solid #ec0000;
 }
 
 /* chatheads */
@@ -631,8 +647,10 @@ ion-icon {
     flex-direction: column;
     z-index: 100;
     border-right: 1px solid #0000006b;
+    background: #fff;
     padding-top: 1%;
     padding-left: 1%;
+    padding-right: 1%;
 }
 
 .upper_chatheads {
@@ -652,7 +670,7 @@ ion-icon {
 
     display: flex;
     padding: 2%;
-    background: #fff;
+    background: #00000015;
     border-radius: 30px;
     margin-top: 2%;
 }
@@ -660,13 +678,14 @@ ion-icon {
 #chatheads_search_icon {
 
     margin-left: 5px;
-    font-size: 28px;
+    font-size: 26px;
     margin-right: 10px;
 }
 
 #search_chats {
-
+    width: 80%;
     font-size: 1rem;
+    background: none;
 }
 
 /* chatheads_users_group */
@@ -721,9 +740,16 @@ ion-icon {
 
 /* chat_box */
 
+.chat_box_containner {
+
+    flex-grow: 1;
+    display: flex;
+    height: 100%;
+}
+
 .chat_box {
 
-    width: 80%;
+    flex-grow: 1;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -731,7 +757,7 @@ ion-icon {
 
 .chat_box.shrink {
 
-    width: 60%;
+    width: 55%;
 }
 
 /* chat box navbar */
@@ -797,7 +823,7 @@ ion-icon {
 .chat_box_conversation {
 
     width: 100%;
-    height: 80%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column-reverse;
     overflow-y: auto;            /* Enable vertical scroll */
@@ -813,7 +839,7 @@ ion-icon {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-
+    margin-bottom: 250px;
     background: none;
 }
 
@@ -836,7 +862,7 @@ ion-icon {
     height: fit-content;
     display: flex;
     justify-content: start;
-    margin-bottom: 1%;
+    margin-bottom: 10px;
 }
 
 #partner_chat_img {
@@ -847,6 +873,7 @@ ion-icon {
 #partner_message {
 
     max-width: 40%;
+    height: max-content;
     display: flex;
     align-items: center;
     width: fit-content;
@@ -854,11 +881,11 @@ ion-icon {
     white-space: normal;        /* Allow text to wrap to the next line */
     font-family: 'yantra';
     font-size: 1.1rem;
-    padding: 0.8%;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: #0000001a;
-    margin-left: 3%;
+    margin-left: 10px;
     border-radius: 20px;
 }
 
@@ -867,13 +894,14 @@ ion-icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 16vh;
-    height: 2vh;
-    font-size: 1.1rem;
-    padding: 2%;
+    width: 120px;
+    height: 5px;
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: 'yantra_light';
+    padding: 20px;
     background: #d3d3d3;
     border-radius: 10px;
-    margin-bottom: 225px;
 }
 
 #view_partner_profile:hover {
@@ -895,6 +923,7 @@ ion-icon {
 .your_message {
 
     max-width: 40%;
+    height: max-content;
     display: flex;
     align-items: center;
     width: fit-content;
@@ -903,11 +932,11 @@ ion-icon {
     font-family: 'yantra';
     font-size: 1.1rem;
     color: #fff;
-    padding: 0.6%;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 0.5%;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
     background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
-    margin-left: 3%;
+    
     border-radius: 20px;
 }
 
@@ -952,6 +981,112 @@ ion-icon {
     height: max-content;
     margin-left: 10px;
 }
+
+/* delete conversation popup */
+.delete_overlay {
+
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: #00000034;
+    z-index: 1000;
+}
+
+.delete_overlay.show {
+
+    display: flex;
+}
+
+.delete_form {
+
+    width: 30%;
+    height: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #fff;
+    padding: 2%;
+    border-radius: 5%;
+}
+
+#clear {
+
+    display: none;
+}
+
+.alert_icon {
+
+    font-size: 64px;
+    margin-bottom: 5%;
+}
+
+.delete_sure_text {
+
+    font-size: 2rem;
+    margin-bottom: 5%;
+    font-family: 'yantra_bold';
+}
+
+.delete_warning_text {
+
+    font-size: 1rem;
+    margin-bottom: 30px;
+    white-space: normal;      /* Allows text to wrap to the next line */
+    overflow-wrap: break-word; /* Breaks words at the end of the line if needed */
+}
+
+.delete_btn_group {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.delete_no {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-family: 'yantra_bold';
+    width: 30%;
+    height: 80%;
+    padding: 2%;
+    background: #eaeaea;
+    border-radius: 10px;
+}
+
+.delete_no:hover {
+
+    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
+    color: #fff;
+}
+
+.delete_yes {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-family: 'yantra_bold';
+    width: 30%;
+    height: 80%;
+    padding: 2%;
+    background: #eaeaea;
+    border-radius: 10px;
+}
+
+.delete_yes:hover {
+
+    background: #c70000;
+    color: #fff;
+}
+
 
 
 
