--- a/message.css
+++ b/message.css
@@ -82,14 +82,12 @@ ion-icon {
 /* php */
 #link_clickable {
 
-    color: #fff;
-    white-space: normal;      /* Allows text to wrap to the next line */
-    overflow-wrap: break-word; /* Breaks words at the end of the line if needed */
+    color: #f0f0f0;
 }
 
 #link_clickable:hover {
 
-    border-bottom: 1px solid #fff;
+    color: #fff;
 }
 
 /* header */
@@ -516,17 +514,35 @@ ion-icon {
 /* message_option_dropdown */
 .message_option_dropdown {
 
+    position: relative;
     display: none;
-    flex-direction: column;
-    width: 25%;
+    width: 30%;
     height: 100%;
     border-left: 1px solid rgba(0, 0, 0, 0.4);
     overflow: hidden; /* Prevent overflow from inner elements */
+    overflow-x: hidden;
 }
 
 .message_option_dropdown.show {
 
+    display: block;
+}
+
+.message_option_slide {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    transition: transform 0.5s ease;
+}
+
+.message_option_dropdown.active .message_option_slide {
+
+    transform: translateX(-100%);
 }
 
 /* message_option_title */
@@ -589,40 +605,47 @@ ion-icon {
 
 .option_files {
 
-    flex-grow: 2;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+.option_files_wrap {
+
+    width: 100%;
+    height: max-content;
+    padding: 10px;
+    background: #0000002b;
+    border-radius: 10px;
 }
 
 .files_title_group {
 
-    padding: 10px;
+    padding-bottom: 10px;
     display: flex;
     align-items: center;
 }
 
 .files_title_name {
 
-    font-size: 0.9rem;
-    margin-right: 10%;
+    font-size: 1rem;
+    margin-right: 77%;
 }
 
 .files_expand_btn {
 
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .files_content_group {
 
     width: 100%;
-    height: 200px; /* Prevent overflow */
+    height: 70%; /* Prevent overflow */
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    justify-content: center;
-    gap: 0.5em;
-    overflow-y: auto; /* Allow scrolling */
+    gap: 0.2em;
+    overflow-y: hidden; /* Allow scrolling */
 }
 
 /* Hide scrollbar for WebKit browsers */
@@ -897,6 +920,7 @@ ion-icon {
     align-items: center;
     width: fit-content;
     word-wrap: break-word;      /* Wrap text within the specified width */
+    word-break: break-all;
     white-space: normal;        /* Allow text to wrap to the next line */
     font-family: 'yantra';
     font-size: 1.1rem;
@@ -947,6 +971,7 @@ ion-icon {
     align-items: center;
     width: fit-content;
     word-wrap: break-word;      /* Wrap text within the specified width */
+    word-break: break-all;
     white-space: normal;        /* Allow text to wrap to the next line */
     font-family: 'yantra';
     font-size: 1.1rem;
@@ -954,7 +979,7 @@ ion-icon {
     padding: 0.5%;
     padding-left: 1.5%;
     padding-right: 1.5%;
-    background: linear-gradient(90deg, #595bf1 0%, rgba(148, 134, 241, 0.8) 100%);
+    background: linear-gradient(90deg, #595bf1 0%, rgb(148, 134, 241) 100%);
     
     border-radius: 20px;
 }
@@ -1115,6 +1140,64 @@ ion-icon {
 
     background: #c70000;
     color: #fff;
+}
+
+/* photos tab */
+.photos_tab {
+
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.5s ease;
+}
+
+/* Slide-in effect */
+.message_option_dropdown.active .photos_tab {
+    transform: translateX(-100%);
+}
+
+.photos_tab.show {
+
+    display: flex;
+}
+
+.photos_title_group {
+
+    width: 100%;
+    display: flex;
+    height: 10%;
+    align-items: center;
+}
+
+#photos_back_btn {
+
+    font-size: 1.3rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.photos_text {
+
+    font-size: 1.3rem;
+    font-family: 'yantra_bold';
+}
+
+#files_img_group {
+
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    gap: 0.2em;
+    overflow-y: auto; /* Allow scrolling */
 }
 
 
